--- a/services/notify/package.json
+++ b/services/notify/package.json
@@ -5,7 +5,8 @@
   "license": "MIT",
   "scripts": {
     "start": "node src/server.js",
-    "start:dev": "nodemon src/server.js"
+    "start:dev": "nodemon src/server.js",
+    "test": "mocha"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
@@ -14,7 +15,9 @@
     "morgan": "^1.10.0"
   },
   "devDependencies": {
+    "chai": "^4.3.0",
     "dotenv": "^8.2.0",
+    "mocha": "^8.3.0",
     "nodemon": "^2.0.7"
   }
 }
