--- a/services/profile/package.json
+++ b/services/profile/package.json
@@ -5,17 +5,20 @@
   "license": "MIT",
   "scripts": {
     "start": "node src/server.js",
-    "start:dev": "nodemon src/server.js"
+    "start:dev": "nodemon src/server.js",
+    "test": "mocha"
   },
   "dependencies": {
     "axios": "^0.21.1",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "morgan": "^1.10.0",
-    "dotenv": "^8.2.0"
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
+    "chai": "^4.3.0",
+    "mocha": "^8.3.0",
     "nodemon": "^2.0.7"
   }
 }
