add mono repo ci path

--- a/.github/workflows/profile.yml
+++ b/.github/workflows/profile.yml
@@ -2,8 +2,8 @@ name: Node.js CI
 
 on:
   push:
-    branches: [ master ]
-  pull_request:
+    paths:
+      - 'profile/*'
     branches: [ master ]
 
 jobs:
