--- a/.github/workflows/profile.yml
+++ b/.github/workflows/profile.yml
@@ -3,7 +3,7 @@ name: Node.js CI
 on:
   push:
     paths:
-      - 'services/profile'
+      - './services/profile'
     branches: [ master ]
 
 jobs:
